option(USE_MAIN "run main." ON)

AUX_SOURCE_DIRECTORY(. TEST_SRCS)
AUX_SOURCE_DIRECTORY(utils TEST_SRCS)

# Optional Modules

IF(WITH_AES)
    AUX_SOURCE_DIRECTORY(aes TEST_SRCS)
endif(WITH_AES)

IF(WITH_SM4)
    AUX_SOURCE_DIRECTORY(sm4 TEST_SRCS)
endif(WITH_SM4)

IF(SM4_WB)
    AUX_SOURCE_DIRECTORY(sm4_whitebox TEST_SRCS)
ENDIF(SM4_WB)

SET(BUILD_SHARED_TEST_NAME ${BUILD_SHARED_NAME}_TEST)
SET(BUILD_STATIC_TEST_NAME ${BUILD_STATIC_NAME}_TEST)

SET(TEST_MAIN_SHARED_NAME ${PROJECT_NAME}_SHARED_MAIN)
SET(TEST_MAIN_STATIC_NAME ${PROJECT_NAME}_STATIC_MAIN)

ADD_LIBRARY(${BUILD_SHARED_TEST_NAME} SHARED ${TEST_SRCS} test_main.c)

SET_TARGET_PROPERTIES(${BUILD_SHARED_TEST_NAME} PROPERTIES OUTPUT_NAME ${BUILD_NAME}_TEST)
SET_TARGET_PROPERTIES(${BUILD_SHARED_TEST_NAME} PROPERTIES CLEAN_DIRECT_OUTPUT 1)

GET_TARGET_PROPERTY(BUILD_SHARED_OUTPUT_NAME ${BUILD_SHARED_NAME} OUTPUT_NAME)
MESSAGE(STATUS  "This is the ${BUILD_SHARED_NAME} OUTPUT_NAME:" ${BUILD_SHARED_OUTPUT_NAME})

TARGET_LINK_LIBRARIES(${BUILD_SHARED_TEST_NAME} ${BUILD_SHARED_NAME})

IF(USE_MAIN)
    ADD_EXECUTABLE(${TEST_MAIN_SHARED_NAME} ../main.c)
    TARGET_LINK_LIBRARIES(${TEST_MAIN_SHARED_NAME} ${BUILD_SHARED_TEST_NAME})
ENDIF()

ADD_LIBRARY(${BUILD_STATIC_TEST_NAME} STATIC ${TEST_SRCS} test_main.c)

SET_TARGET_PROPERTIES(${BUILD_STATIC_TEST_NAME} PROPERTIES OUTPUT_NAME ${BUILD_NAME}_TEST)
SET_TARGET_PROPERTIES(${BUILD_STATIC_TEST_NAME} PROPERTIES CLEAN_DIRECT_OUTPUT 1)

GET_TARGET_PROPERTY(BUILD_STATIC_OUTPUT_NAME ${BUILD_STATIC_NAME} OUTPUT_NAME)
MESSAGE(STATUS  "This is the ${BUILD_STATIC_NAME} OUTPUT_NAME:" ${BUILD_STATIC_OUTPUT_NAME})

TARGET_LINK_LIBRARIES(${BUILD_STATIC_TEST_NAME} ${BUILD_STATIC_NAME})

IF(USE_MAIN)
    ADD_EXECUTABLE(${TEST_MAIN_STATIC_NAME} ../main.c)
    TARGET_LINK_LIBRARIES(${TEST_MAIN_STATIC_NAME} ${BUILD_STATIC_TEST_NAME})
ENDIF(USE_MAIN)
